assets/css/style.css
/* global style & vars */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    --primary-color: rgb(230, 230, 230);
    --secondary-color: black;
    --tertiary-color: slategray;
}
/* global style & vars */


/* general styles (practically global) */
body {
    color: var(--tertiary-color);
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

section {
    padding: 60px;
    justify-content: space-between;
    display: flex;
    scroll-margin-top: 40px;            /* prevents anchor links scrolling too far due to sticky header */
}

.section-title {
    font-size: 48px;
    color: var(--secondary-color);
    border-right: 8px solid;
    text-shadow: 0 0 10px var(--tertiary-color);
    text-align: end;
    padding: 0 20px;
    flex: 1;
    align-items: flex-end;
}

.content {
    flex: 4;
    padding: 0 20px;
}
  
.primary-border {
    border-color: var(--primary-color);
}

.secondary-border {
    border-color: var(--secondary-color);
}

.tertiary-border {
    border-color: var(--tertiary-color);
}
/* general styles (practically global) */


/* apply style to header*/
header {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    padding: 20px 35px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    background-image: url("../images/escher-metamorphose.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: top;
    background-attachment: fixed;
    align-items: center;
    z-index: 9999;
}

header h1 {
    display: flex;
    background-color: rgba(255,255,255, .7);
    padding: 5px 25px;
    border-radius: 15px;
    box-shadow: 5px 5px 10px var(--secondary-color);
    justify-content: center;
}

header a {
    text-decoration: none;
}

header h1 a {
    font-weight: bold;
    font-size: 2.5vw;
    color: var(--secondary-color);
    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
}

header h1:hover {
    background-color: white;
    text-shadow: none;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    list-style: none;
}

header nav ul li a {
    color: var(--secondary-color);
    padding: 5px 40px;
    margin: 0 15px;
    font-size: 1.55vw;
    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
    background-color: rgba(255,255,255, .7);
    border-radius: 15px;
    box-shadow: 5px 5px 10px var(--secondary-color);
}

header nav ul li a:hover {
    background: white;
    text-shadow: none;
}
/* apply style to header*/


/* hero style */
.hero {
    background-image: url("../images/escher-metamorphose.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 20vw;                   /* allow hero height to scale with screen size*/
}
/* hero style */


/* about me style */
.intro {
    background-color: var(--primary-color);
    justify-content: center;
    position: relative;
}

.intro .headshot img {
    width: 276px;
    position: absolute;
    left: 50%;                      /* center image */
    margin-left: -138px;            /* offset image by radius to center*/
    top: -235px;
    border: 3px solid var(--primary-color);
    outline: 8px solid var(--secondary-color);
    background-color: var(--primary-color);
    box-shadow: 10px 10px 10px var(--secondary-color);
    border-radius: 50%;
}

.intro article {
    line-height: 1.5;
    color: var(--secondary-color);
    font-size: 20px;
}
/* about me style */


/* work style */
.work {
    background: white;
}

.work .card {
    position: relative;
}

.work a {
    text-decoration: none;
    color: var(--secondary-color);
}

.work img {
    width: 100%;
    opacity: .6;
    border-radius: 10px;
    box-shadow: 5px 5px 10px var(--secondary-color);
}

.work .card:hover img {
    opacity: 1;
}

.work .content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.work .card:first-child{
    flex: 1 1 100%;
}

.work .card:not(:first-child) {
    flex: 1 1 40%;
    min-width: 300px;
    margin-top: 20px;
}

.work .card:nth-child(even) {
    margin-right: 20px;
}

.work .overlay {
    opacity: 1;
    background-color: var(--primary-color);
    position: absolute;
    bottom: 10%;
    font-size: 30px;
    font-weight: bold;
    padding: 7px 50px 7px 20px;
    border-top-right-radius: 50px;
    border-bottom-right-radius: 50px;
    text-shadow: 0 0 3px var(--secondary-color);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, .5);
}

.work .overlay p {
    text-shadow: none;
    font-size: 18px;
    font-style: italic;
    margin: 5px 0;
}
/* work style */


/* contact me styles */
.contact {
    background: var(--secondary-color);
    align-items: center;
}

.contact h2 {
    color: var(--primary-color);
}

.contact ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    list-style: none;
    align-items: center;
}

.contact ul li {
    color: var(--secondary-color);
    padding: 5px 20px;
    margin: 0 20px;
    font-size: 15px;
    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
    background-color: rgba(255,255,255, .7);
    border-radius: 15px;
    box-shadow: 3px 3px 10px var(--tertiary-color);
}

.contact ul li span {               /* emoji size */
    font-size: 20px;
}

.contact ul li .hovered {           /* for hiding content when not hovering*/
    display: none;
}

.contact ul li:hover {
    background: white;
    text-shadow: none;
}

.contact ul li:hover .hovered {     /* for displaying new content when hovered*/
    display: block;
}

.contact ul li:hover .initial {     /* for hiding initial content when hovered*/
    display: none;
}

.contact a {
    text-decoration: none;
    color: var(--secondary-color);
    display: flex;
    flex-wrap: wrap;
}

.contact a img {
    width: 40px;
    padding-right: 5px;
}

#github-logo {
    width: 78px;
    height: 32px;
}

#github-octocat {
    width: 32px;
    height: 32px;
}
/* contact me styles */

footer {
    background: var(--primary-color);
    padding: 35px 40px;
    line-height: 1.3;
    text-align: right;
    color: var(--secondary-color)
}

/* MEDIA QUERY FOR  SMALLER DESKTOP SCREENS AND SMALLER*/
@media screen and (max-width: 1350px) {

    section {
        padding: 40px;
        scroll-margin-top: 40px;
    }

    .section-title {
        font-size: 30px;
    }

    /* resize and position headshot */
    .intro .headshot img {
        width: 170px;
        margin-left: -85px;            /* offset image by new radius to center*/
        top: -140px;
    }

    .card .overlay {
        font-size: 20px;
    }

    .card .overlay p {
        font-size: 15px;
    }

    /* un-cram the contact buttons */
    .contact ul {
        padding: 0;
        display: grid;
        grid-template-columns: auto auto;
        grid-auto-rows: 1fr;
        text-align: center;
        gap: 15px;
    }

    /* now we will always display hovered and initial text*/
    .contact ul li .hovered {
        display: block;
    }

    .contact ul li .initial{        /*seems redundant but it won't stay centered without it*/
        display: block;
    }

    .contact ul li:hover .initial {
        display: block
    }

    .contact ul li a p {            /* linkedin text is justified left */
        text-align: left;
    }

    .contact ul li:focus {
        background: white;
        text-shadow: none;
    }

    .contact ul li {                /* make the first column buttons line up nice*/
        width: 100%;
    }
}

/* smaller screens */
@media screen and (max-width: 945px) {

    /* move section title above content, and switch border from right to bottom */
    .section-title {
        width: 100%;
        font-size: 36px;
        border-right: none;
        border-bottom: 6px solid;
        text-align: center;
        padding: 20px 0;
    }

    section {
        padding: 30px;
        flex-direction: column;
    }
    
    .content {
        padding: 20px 0;
        width: 100%;
    }

    .tertiary-border {          /* somehow it gets set to secondary color at this screen size */
        border-color: var(--tertiary-color);
    }

    .contact ul {
        grid-template-columns: 48% 48%;
        justify-content: center;
    }

    .contact ul li {
        margin: 0;
    }
}

/* MEDIA QUERY FOR TABLETS AND SMALLER*/
@media screen and (max-width: 768px) {

    header {
        padding: 10px;
        display: block;
        background-image: url(../images/MCEscher_DrawingHands.jpg);
        background-size: cover;
        background-position: top;
    }

    header h1 {
        padding: 0 10px;
        width: fit-content;
        margin: 0 auto 10px auto;
    }

    header h1 a {
        font-size: 30px;
    }

    header nav ul {
        width: 100%;
        justify-content: center;
    }

    header nav ul li a {
        font-size: 15px;
    }

    .hero {
        background-image: url(../images/MCEscher_DrawingHands.jpg);
        background-size: cover;
        background-position: top;
        height: 45vw;
    }

    /* resize and position headshot */
    .intro .headshot img {
        width: 200px;
        margin-left: -100px;            /* offset image by new radius to center*/
        top: -170px;
    }

    .intro article {
        font-size: 16px;
    }

    .card .overlay {
        font-size: 18px;
    }

    .work .card:not(:first-child) {
        flex: 1 1 40%;
        min-width: 200px;
        margin-top: 20px;
    }

    .contact ul li {
        font-size: 12px;
    }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {

}

